fix(design): vetically align title and header tabs on large viewports

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -140,13 +140,18 @@
       }
 
       @media (max-width: $viewport-lg) {
-        div {
+        .header-title {
           width: 100%;
         }
       }
 
       .header-tabs-container {
         display: flex;
+
+        @media (min-width: $viewport-lg) {
+          width: auto;
+          margin-left: auto;
+        }
       }
     }
 
